# cv-builder-api

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
cv_builder_api/: settings.py  urls.py  wsgi.py
docker/: docker-compose.yml
structure/: models.py  serializers.py  views.py
structure/migrations/: 0001_initial.py
users/: serializers.py  views.py
