[tool.poetry]
name = "covid-forecast-poetry"
version = "0.1.0"
description = ""
authors = ["edkrueger <edkrueger@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.7.6"
fbprophet = "==0.6"
matplotlib = "==3.2.2"
pandas = "==1.0.5"
plotly = "==4.8.2"
pystan = "==2.19.1.1"
streamlit = "==0.62.1"

[tool.poetry.dev-dependencies]
black = "*"
pipenv-to-requirements = "*"
pre-commit = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"